--- a/.github/actions/deploy/argocd/teardown-argocd/action.yml
+++ b/.github/actions/deploy/argocd/teardown-argocd/action.yml
@@ -1,5 +1,5 @@
 name: "Teardown ArgoCD Environment"
-description: "Tears down an ArgoCD environment by removing an ephemeral environment file."
+description: "Tears down an ArgoCD environment by removing an ephemeral environment file and cleaning up old files."
 inputs:
   sha:
     description: "SHA of the commit"
@@ -17,7 +17,7 @@ runs:
         token: ${{ env.ACTIONS_PAT }}
         path: sidechains-argocd
 
-    - name: Delete Ephemeral Environment File
+    - name: Delete Ephemeral Environment File and Cleanup Old Files
       uses: actions/github-script@v7
       with:
         github-token: ${{ env.ACTIONS_PAT }}
@@ -25,28 +25,120 @@ runs:
           const fs = require('fs');
           const path = require('path');
 
-          const directory = 'sidechains-argocd/integration-testing';
-          const targetFile = `manifest-sha-${{ inputs.sha }}.yaml`;
-          const filePath = path.join(directory, targetFile);
+          // Inject the SHA from inputs
+          const sha = '${{ inputs.sha }}';
+          const targetFile = `manifest-sha-${sha}.yaml`;
 
-          if (fs.existsSync(filePath)) {
-            console.log(`Deleting file: ${targetFile}`);
+          // Correct directory path relative to the repository root
+          const directory = 'integration-testing';
+          
+          // Full path to the target file (local filesystem)
+          const targetFilePath = path.join('sidechains-argocd', directory, targetFile);
 
-            const shaResponse = await github.rest.repos.getContent({
-              owner: 'input-output-hk',
-              repo: 'sidechains-argocd',
-              path: `integration-testing/${targetFile}`,
-            });
-            const fileSha = shaResponse.data.sha;
+          // Function to delete a file via GitHub API
+          async function deleteFile(owner, repo, filePath, commitMessage, branch) {
+            try {
+              const fileResponse = await github.rest.repos.getContent({
+                owner,
+                repo,
+                path: filePath,
+                ref: branch
+              });
 
-            await github.rest.repos.deleteFile({
-              owner: 'input-output-hk',
-              repo: 'sidechains-argocd',
-              path: `integration-testing/${targetFile}`,
-              message: `ci: Tear down integration-testing environment for SHA ${{ inputs.sha }}`,
-              sha: fileSha,
-              branch: 'main'
-            });
+              const fileSha = fileResponse.data.sha;
+
+              await github.rest.repos.deleteFile({
+                owner,
+                repo,
+                path: filePath,
+                message: commitMessage,
+                sha: fileSha,
+                branch: branch
+              });
+
+              console.log(`Deleted file: ${filePath}`);
+            } catch (error) {
+              if (error.status === 404) {
+                console.log(`File not found (already deleted or never existed): ${filePath}`);
+              } else {
+                console.error(`Failed to delete file ${filePath}:`, error);
+                throw error; // Re-throw to fail the step if necessary
+              }
+            }
+          }
+
+          // Delete the specific target file if it exists locally
+          if (fs.existsSync(targetFilePath)) {
+            console.log(`Deleting target file: ${targetFile}`);
+            await deleteFile(
+              'input-output-hk',
+              'sidechains-argocd',
+              `${directory}/${targetFile}`,
+              `ci: Tear down integration-testing environment for SHA ${sha}`,
+              'main'
+            );
           } else {
-            console.log(`File not found: ${targetFile}`);
+            console.log(`Target file not found: ${targetFile}`);
+          }
+
+          // Get the current time and calculate the cutoff time (1 hour ago)
+          const currentTime = new Date();
+          const cutoffTime = new Date(currentTime.getTime() - (1 * 60 * 60 * 1000)); // 1 hour in milliseconds
+
+          // List all files in the target directory using GitHub API
+          const listResponse = await github.rest.repos.getContent({
+            owner: 'input-output-hk',
+            repo: 'sidechains-argocd',
+            path: directory,
+            ref: 'main'
+          });
+
+          if (Array.isArray(listResponse.data)) {
+            for (const file of listResponse.data) {
+              const fileName = file.name;
+              
+              // Skip the target file since it's already handled
+              if (fileName === targetFile) {
+                continue;
+              }
+
+              // Only process YAML files
+              if (path.extname(fileName) !== '.yaml' && path.extname(fileName) !== '.yml') {
+                continue;
+              }
+
+              // Get the latest commit that modified the file
+              const commitsResponse = await github.rest.repos.listCommits({
+                owner: 'input-output-hk',
+                repo: 'sidechains-argocd',
+                path: `${directory}/${fileName}`,
+                per_page: 1,
+                page: 1
+              });
+
+              if (commitsResponse.data.length === 0) {
+                console.log(`No commits found for file: ${fileName}. Skipping.`);
+                continue;
+              }
+
+              const lastCommit = commitsResponse.data[0];
+              const commitDate = new Date(lastCommit.commit.author.date);
+
+              // Check if the last commit was older than 1 hour
+              if (commitDate < cutoffTime) {
+                console.log(`File ${fileName} is older than 1 hour (last commit: ${commitDate.toISOString()}). Deleting.`);
+                await deleteFile(
+                  'input-output-hk',
+                  'sidechains-argocd',
+                  `${directory}/${fileName}`,
+                  `ci: Cleanup old integration-testing file ${fileName}`,
+                  'main'
+                );
+              } else {
+                console.log(`File ${fileName} is not older than 1 hour (last commit: ${commitDate.toISOString()}). Keeping.`);
+              }
+            }
+          } else {
+            console.error(`The path ${directory} is not a directory or could not be accessed.`);
+            throw new Error(`Failed to list contents of directory: ${directory}`);
           }
