--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,43 +1,44 @@
 [workspace]
 members = [
-	"cli/commands",
-	"cli/node-commands",
-	"client/consensus/aura",
-	"node",
-	"pallets/block-rewards",
-	"pallets/pallet-session-runtime-stub",
-	"pallets/partner-chains-session",
-	"pallets/sidechain",
-	"pallets/sidechain/rpc",
-	"pallets/session-validator-management",
-	"pallets/session-validator-management/benchmarking",
-	"pallets/session-validator-management/rpc",
-	"primitives/consensus/aura",
-	"primitives/block-rewards",
-	"primitives/chain-params",
-	"primitives/domain",
-	"primitives/mock-types",
-	"primitives/selection",
-	"primitives/sidechain-block-search",
-	"primitives/sidechain-slots",
-	"primitives/authority-selection-inherents",
-	"mainchain-follower/main-chain-follower-api",
-	"mainchain-follower/main-chain-follower-cli",
-	"mainchain-follower/db-sync-follower",
-	"mainchain-follower/mock",
-	"utils/byte-string-derivation",
-	"utils/plutus",
-	"utils/plutus/plutus-datum-derive",
-	"runtime",
-	"utils/time-source",
-	"primitives/sidechain-mc-hash",
-	"primitives/session-validator-management",
-	"primitives/session-validator-management/query",
-	"primitives/session-manager",
-	"primitives/sidechain",
-	"partner-chains-cli",
-	"pallets/native-token-management",
-	"primitives/native-token-management",
+    "cli/commands",
+    "cli/node-commands",
+    "client/consensus/aura",
+    "node",
+    "pallets/block-rewards",
+    "pallets/pallet-session-runtime-stub",
+    "pallets/partner-chains-session",
+    "pallets/sidechain",
+    "pallets/sidechain/rpc",
+    "pallets/session-validator-management",
+    "pallets/session-validator-management/benchmarking",
+    "pallets/session-validator-management/rpc",
+    "primitives/consensus/aura",
+    "primitives/block-rewards",
+    "primitives/chain-params",
+    "primitives/domain",
+    "primitives/mock-types",
+    "primitives/selection",
+    "primitives/sidechain-block-search",
+    "primitives/sidechain-slots",
+    "primitives/authority-selection-inherents",
+    "mainchain-follower/main-chain-follower-api",
+    "mainchain-follower/main-chain-follower-cli",
+    "mainchain-follower/db-sync-follower",
+    "mainchain-follower/mock",
+    "utils/byte-string-derivation",
+    "utils/plutus",
+    "utils/plutus/plutus-datum-derive",
+    "utils/ogmios-client",
+    "runtime",
+    "utils/time-source",
+    "primitives/sidechain-mc-hash",
+    "primitives/session-validator-management",
+    "primitives/session-validator-management/query",
+    "primitives/session-manager",
+    "primitives/sidechain",
+    "partner-chains-cli",
+    "pallets/native-token-management",
+    "primitives/native-token-management",
 ]
 resolver = "2"
 
@@ -66,26 +67,41 @@ futures = { version = "0.3.30", features = ["thread-pool"] }
 hex = { version = "0.4.3", features = ["alloc"], default-features = false }
 hex-literal = "0.4.1"
 itertools = "0.13.0"
-jsonrpsee = { version = "0.24.3", features = ["client-core", "server",	"macros"] }
+jsonrpsee = { version = "0.24.3", features = [
+    "client-core",
+    "server",
+    "macros",
+] }
 libp2p-identity = "0.2.9"
 log = { version = "0.4.22", default-features = false }
 minicbor = { version = "0.20", features = ["alloc"] }
 num-bigint = { version = "0.4.3", default-features = false }
 num-traits = { version = "0.2.17", default-features = false }
-parity-scale-codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive", "max-encoded-len"] }
+parity-scale-codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
+    "derive",
+    "max-encoded-len",
+] }
 quickcheck = { version = "1.0.3" }
 proptest = { version = "1.5.0" }
 quickcheck_macros = { version = "1" }
 quote = "1.0"
 rand_chacha = { version = "0.3.1", default-features = false }
 rand = { version = "0.8.5", default-features = false }
-scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
+scale-info = { version = "2.11.1", default-features = false, features = [
+    "derive",
+] }
 secp256k1 = { version = "0.28.2", default-features = false }
-serde = { version = "1.0.209", default-features = false, features = ["derive", "alloc"] }
-serde_json = { version = '1.0.127', default-features = false, features = ['alloc'] }
+serde = { version = "1.0.209", default-features = false, features = [
+    "derive",
+    "alloc",
+] }
+serde_json = { version = '1.0.127', default-features = false, features = [
+    'alloc',
+] }
 syn = "2.0.65"
 tempfile = "3.10.1"
 thiserror = { version = "1.0.48" }
+time = { version = "0.3.36", default-features = false }
 tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
 lazy_static = "1.4.0"
 lru = { version = "0.12.4" }
@@ -182,6 +198,7 @@ sp-session-validator-management-query = { default-features = false, path = "prim
 pallet-session-validator-management = { default-features = false, path = "pallets/session-validator-management" }
 pallet-session-validator-management-benchmarking = { default-features = false, path = "pallets/session-validator-management/benchmarking" }
 pallet-session-validator-management-rpc = { path = "pallets/session-validator-management/rpc" }
+ogmios-client = { path = "utils/ogmios-client", default-features = false }
 sp-block-rewards = { path = "primitives/block-rewards", default-features = false }
 selection = { path = "primitives/selection", default-features = false }
 sidechain-domain = { path = "primitives/domain", default-features = false }
