--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && !github.event.pull_request.merged && github.event.action != 'closed')
     outputs:
       sha: ${{ steps.get_sha.outputs.sha }}
     steps:
@@ -157,7 +158,7 @@ jobs:
           ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
 
   devshell-tests:
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false)
+    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && !github.event.pull_request.merged && github.event.action != 'closed')
     needs: build
     strategy:
       matrix:
