--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && !github.event.pull_request.merged && github.event.action != 'closed')
+    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && (github.event.pull_request.merged || github.event.action != 'closed'))
     outputs:
       sha: ${{ steps.get_sha.outputs.sha }}
     steps:
@@ -158,7 +158,6 @@ jobs:
           ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
 
   devshell-tests:
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && !github.event.pull_request.merged && github.event.action != 'closed')
     needs: build
     strategy:
       matrix:
