--- a/partner-chains-cli/Cargo.toml
+++ b/partner-chains-cli/Cargo.toml
@@ -29,6 +29,13 @@ thiserror = { workspace = true }
 tempfile = { workspace = true }
 secp256k1 = { workspace = true, features = ["std"] }
 colored = { version = "2.1.0" }
+jsonrpsee = { workspace = true, features = [
+    "client-core",
+    "http-client",
+    "macros",
+] }
+ogmios-client = { workspace = true, features = ["jsonrpsee-client"] }
+tokio = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
