Make jsonrpsee-client default feature and run test for it in CI

--- a/utils/ogmios-client/Cargo.toml
+++ b/utils/ogmios-client/Cargo.toml
@@ -23,4 +23,5 @@ anyhow = { workspace = true }
 tokio = { workspace = true }
 
 [features]
+default = ["jsonrpsee-client"]
 jsonrpsee-client = ["jsonrpsee"]
