--- a/mainchain-follower/db-sync-follower/Cargo.toml
+++ b/mainchain-follower/db-sync-follower/Cargo.toml
@@ -29,7 +29,9 @@ figment = { workspace = true }
 substrate-prometheus-endpoint = { workspace = true }
 derive-new = { workspace = true }
 lru = { workspace = true }
+sp-timestamp = { workspace = true }
 sp-native-token-management = { workspace = true, features = ["std"], optional = true }
+sidechain-mc-hash = { workspace = true, optional = true }
 
 [dev-dependencies]
 tokio-test = "0.4.3"
@@ -37,6 +39,6 @@ ctor = "0.2.5"
 
 [features]
 default = []
-block-source = ["main-chain-follower-api/block-source"]
+block-source = ["main-chain-follower-api/block-source", "sidechain-mc-hash"]
 candidate-source = ["main-chain-follower-api/candidate-source"]
 native-token = ["sp-native-token-management"]
