--- a/mainchain-follower/db-sync-follower/Cargo.toml
+++ b/mainchain-follower/db-sync-follower/Cargo.toml
@@ -42,3 +42,4 @@ default = []
 block-source = ["main-chain-follower-api/block-source", "sidechain-mc-hash"]
 candidate-source = ["main-chain-follower-api/candidate-source"]
 native-token = ["sp-native-token-management"]
+mc-hash = ["sidechain-mc-hash"]
