--- a/mainchain-follower/mock/Cargo.toml
+++ b/mainchain-follower/mock/Cargo.toml
@@ -27,6 +27,7 @@ std = [
 	"rand/std",
 	"sp-native-token-management?/std"
 ]
-block-source = ["main-chain-follower-api/block-source", "sidechain-mc-hash"]
+block-source = ["main-chain-follower-api/block-source"]
 candidate-source = ["main-chain-follower-api/candidate-source"]
 native-token = ["sp-native-token-management"]
+mc-hash = ["sidechain-mc-hash"]
