--- a/mainchain-follower/db-sync-follower/Cargo.toml
+++ b/mainchain-follower/db-sync-follower/Cargo.toml
@@ -32,6 +32,7 @@ lru = { workspace = true }
 sp-timestamp = { workspace = true }
 sp-native-token-management = { workspace = true, features = ["std"], optional = true }
 sidechain-mc-hash = { workspace = true, optional = true }
+pallet-sidechain-rpc = { workspace = true, optional = true }
 
 [dev-dependencies]
 tokio-test = "0.4.3"
@@ -43,3 +44,4 @@ block-source = ["main-chain-follower-api/block-source", "sidechain-mc-hash"]
 candidate-source = ["main-chain-follower-api/candidate-source"]
 native-token = ["sp-native-token-management"]
 mc-hash = ["sidechain-mc-hash"]
+sidechain-rpc = ["pallet-sidechain-rpc"]
