--- a/mainchain-follower/mock/Cargo.toml
+++ b/mainchain-follower/mock/Cargo.toml
@@ -17,6 +17,7 @@ sidechain-domain = { workspace = true }
 sp-timestamp = { workspace = true }
 sp-native-token-management = { workspace = true, optional = true }
 sidechain-mc-hash = { workspace = true, optional = true }
+pallet-sidechain-rpc = { workspace = true, optional = true }
 
 [features]
 default = [ "std", "block-source", "candidate-source", "native-token" ]
@@ -31,3 +32,4 @@ block-source = ["main-chain-follower-api/block-source"]
 candidate-source = ["main-chain-follower-api/candidate-source"]
 native-token = ["sp-native-token-management"]
 mc-hash = ["sidechain-mc-hash"]
+sidechain-rpc = ["pallet-sidechain-rpc"]
