--- a/primitives/sidechain-mc-hash/Cargo.toml
+++ b/primitives/sidechain-mc-hash/Cargo.toml
@@ -16,6 +16,7 @@ sp-runtime = { workspace = true, features = ["std"] }
 sp-timestamp = { workspace = true }
 thiserror = { workspace = true }
 derive-new = { workspace = true, optional = true }
+serde = { workspace = true, optional = true }
 
 [dev-dependencies]
 tokio = { workspace = true }
@@ -23,4 +24,4 @@ derive-new = { workspace = true }
 
 [features]
 mock = ["derive-new"]
-serde = []
+serde = ["dep:serde"]
