--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -106,6 +106,7 @@ time-source = { workspace = true, features = ["mock"] }
 assert_cmd = { workspace = true }
 sp-native-token-management = { workspace = true, features = ["mock"] }
 pallet-sidechain-rpc = { workspace = true, features = ["mock"] }
+authority-selection-inherents = { workspace = true, features = ["mock"] }
 
 [features]
 default = ["sidechain-domain/std", "chain-params/std"]
