--- a/mainchain-follower/mock/Cargo.toml
+++ b/mainchain-follower/mock/Cargo.toml
@@ -18,6 +18,7 @@ sp-timestamp = { workspace = true }
 sp-native-token-management = { workspace = true, optional = true }
 sidechain-mc-hash = { workspace = true, optional = true }
 pallet-sidechain-rpc = { workspace = true, optional = true }
+authority-selection-inherents = { workspace = true, optional = true }
 
 [features]
 default = [ "std", "block-source", "candidate-source", "native-token" ]
@@ -29,7 +30,7 @@ std = [
 	"sp-native-token-management?/std"
 ]
 block-source = ["main-chain-follower-api/block-source"]
-candidate-source = ["main-chain-follower-api/candidate-source"]
+candidate-source = ["authority-selection-inherents"]
 native-token = ["sp-native-token-management"]
 mc-hash = ["sidechain-mc-hash"]
 sidechain-rpc = ["pallet-sidechain-rpc"]
