--- a/primitives/authority-selection-inherents/Cargo.toml
+++ b/primitives/authority-selection-inherents/Cargo.toml
@@ -48,8 +48,10 @@ std = [
     "serde/std",
     "sidechain-slots",
     "sidechain-slots/std",
+    "sidechain-slots/serde",
     "sp-api/std",
     "sp-session-validator-management/std",
+    "sp-session-validator-management/serde",
     "sp-core/std",
     "sp-inherents/std",
     "sp-runtime/std",
