--- a/mainchain-follower/mock/Cargo.toml
+++ b/mainchain-follower/mock/Cargo.toml
@@ -9,7 +9,6 @@ async-trait = { workspace = true }
 hex = { workspace = true }
 hex-literal = { workspace = true }
 log = { workspace = true }
-main-chain-follower-api = { workspace = true }
 rand = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
@@ -25,11 +24,10 @@ default = [ "std", "block-source", "candidate-source", "native-token" ]
 std = [
 	"serde_json/std",
 	"sidechain-domain/std",
-	"main-chain-follower-api/std",
 	"rand/std",
 	"sp-native-token-management?/std"
 ]
-block-source = ["main-chain-follower-api/block-source"]
+block-source = []
 candidate-source = ["authority-selection-inherents"]
 native-token = ["sp-native-token-management"]
 mc-hash = ["sidechain-mc-hash"]
