--- a/utils/ogmios-client/Cargo.toml
+++ b/utils/ogmios-client/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
+fraction = { workspace = true, features = ["with-decimal", "with-serde-support"] }
 hex = { workspace = true }
 jsonrpsee = { workspace = true, optional = true, features = [
     "client-core",
