--- a/primitives/authority-selection-inherents/Cargo.toml
+++ b/primitives/authority-selection-inherents/Cargo.toml
@@ -9,7 +9,6 @@ edition = "2021"
 async-trait = { workspace = true, optional = true }
 frame-support = { workspace = true }
 log = { workspace = true }
-main-chain-follower-api = { workspace = true, optional = true, features = ["candidate-source"] }
 minicbor = { workspace = true }
 sp-session-validator-management = { workspace = true }
 parity-scale-codec = { workspace = true }
@@ -43,13 +42,13 @@ std = [
 	"frame-support/std",
 	"sidechain-domain/std",
 	"parity-scale-codec/std",
-    "main-chain-follower-api/candidate-source",
-    "main-chain-follower-api/std",
     "serde/std",
     "sidechain-slots",
     "sidechain-slots/std",
+    "sidechain-slots/serde",
     "sp-api/std",
     "sp-session-validator-management/std",
+    "sp-session-validator-management/serde",
     "sp-core/std",
     "sp-inherents/std",
     "sp-runtime/std",
@@ -58,3 +57,4 @@ std = [
     "async-trait",
     "selection/std",
 ]
+mock = []
