--- a/.github/workflows/devnet.yml
+++ b/.github/workflows/devnet.yml
@@ -37,7 +37,7 @@ jobs:
       id-token: write
       contents: read
 
-    runs-on: self-hosted
+    runs-on: [self-hosted, eks]
     
     if: github.event.pull_request.draft == false
 
