--- a/mainchain-follower/main-chain-follower-cli/Cargo.toml
+++ b/mainchain-follower/main-chain-follower-cli/Cargo.toml
@@ -15,3 +15,4 @@ env_logger = { workspace = true }
 log = { workspace = true }
 sidechain-domain = { workspace = true }
 authority-selection-inherents = { workspace = true }
+sp-timestamp = { workspace = true }
