--- a/.github/actions/artifacts/generate-chain-specs/action.yml
+++ b/.github/actions/artifacts/generate-chain-specs/action.yml
@@ -18,11 +18,11 @@ runs:
       run: |
         chmod +x partner-chains-node-${{ inputs.tag }}-x86_64-linux
         source ./envs/devnet/.envrc
-        ./partner-chains-node-${{ inputs.tag }}-x86_64-linux build-spec --chain local --disable-default-bootnode --raw > devnet_chain_spec.json
+        ./partner-chains-node-${{ inputs.tag }}-x86_64-linux build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
         source ./envs/staging-preview/.envrc
-        ./partner-chains-node-${{ inputs.tag }}-x86_64-linux build-spec --chain staging --disable-default-bootnode --raw > staging_preview_chain_spec.json
+        ./partner-chains-node-${{ inputs.tag }}-x86_64-linux build-spec --chain staging --disable-default-bootnode > staging_preview_chain_spec.json
         source ./envs/staging-preprod/.envrc
-        ./partner-chains-node-${{ inputs.tag }}-x86_64-linux build-spec --chain staging --disable-default-bootnode --raw > staging_preprod_chain_spec.json
+        ./partner-chains-node-${{ inputs.tag }}-x86_64-linux build-spec --chain staging --disable-default-bootnode > staging_preprod_chain_spec.json
     - name: Upload Chain Specs
       uses: actions/upload-artifact@v4
       with:
