change: Remove main-chain-follower-api crate and clean up (#156)

--- a/mainchain-follower/main-chain-follower-cli/Cargo.toml
+++ b/mainchain-follower/main-chain-follower-cli/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2021"
 clap = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-main-chain-follower-api = { workspace = true }
 db-sync-follower = { workspace = true, features = ["block-source", "candidate-source"] }
 tokio = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
 sidechain-domain = { workspace = true }
 authority-selection-inherents = { workspace = true }
+sp-timestamp = { workspace = true }
